--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           </div>
         </div>
 
-        <div class="text-left linkedin-link">
+        <!-- <div class="text-left linkedin-link mt-0">
           Check more details about my work experience on my
           <a
             href="https://www.linkedin.com/in/savvina-drougouti/"
@@ -354,7 +354,7 @@
             ><i class="fab fa-linkedin"></i
           ></a>
           profile
-        </div>
+        </div> -->
       </section>
 
       <section class="resume-section p-3 p-lg-5" id="education">
@@ -368,32 +368,14 @@
               </div>
 
               <div class="card-body pb-0">
-                <p>2017 - 2018</p>
-                <h5 class="card-title">Web Development</h5>
+                <p>2006 - 2016</p>
+                <h6 class="card-title">Marticulation, ASN</h6>
 
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">HTML5 & CSS3</li>
-                  <li class="list-group-item">JavaScript</li>
-                  <li class="list-group-item">jQuery</li>
-                  <li class="list-group-item">Teamwork</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card mb-4">
-              <div class="edu-icons">
-                <i class="fas fa-graduation-cap fa-5x edu-icons"></i>
-              </div>
-              <div class="card-body pb-0">
-                <p>2017 - 2018</p>
-                <h5 class="card-title">Front-End Web Development</h5>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">HTML5 & CSS3</li>
-                  <li class="list-group-item">JavaScript</li>
-                  <li class="list-group-item">jQuery</li>
-                  <li class="list-group-item">CSS Animation</li>
-                  <li class="list-group-item">Bootstrap 4</li>
+                  <li class="list-group-item">PCM</li>
+                  <li class="list-group-item">English</li>
+                  <li class="list-group-item">Social Sciences</li>
+                  <li class="list-group-item">CGPA : 10</li>
                 </ul>
               </div>
             </div>
@@ -405,13 +387,31 @@
               </div>
               <div class="card-body pb-0">
                 <p>2017 - 2018</p>
-                <h5 class="card-title">Web Development</h5>
+                <h6 class="card-title">Intermediate ,ASN</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">PCM</li>
+                  <li class="list-group-item">English</li>
+                  <li class="list-group-item">Comouter Science</li>
+                  <li class="list-group-item">Percentage : 92%</li>
+                  <!-- <li class="list-group-item">Bootstrap 4</li> -->
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card mb-4">
+              <div class="edu-icons">
+                <i class="fas fa-graduation-cap fa-5x edu-icons"></i>
+              </div>
+              <div class="card-body pb-0">
+                <p>2017 - 2018</p>
+                <h6 class="card-title">B.Tech MSIT,Janakpuri</h6>
 
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">HTML5 & CSS3</li>
-                  <li class="list-group-item">JavaScript</li>
-                  <li class="list-group-item">jQuery</li>
-                  <li class="list-group-item">Teamwork</li>
+                  <li class="list-group-item">Computer Science & Engineering</li>
+                  <li class="list-group-item">CGPA : 8.8</li>
+                  <!-- <li class="list-group-item">jQuery</li>
+                  <li class="list-group-item">Teamwork</li> -->
                 </ul>
               </div>
             </div>
@@ -419,7 +419,7 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5" id="certificates">
+      <!-- <section class="resume-section p-3 p-lg-5" id="certificates">
         <div class="my-auto">
           <h2 class="mb-5">&lt; Certificates &gt;</h2>
           <div class="row">
@@ -462,11 +462,11 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="resume-section p-3 p-lg-5" id="contact">
         <div class="my-auto">
-          <h2 class="mb-3">&lt; Contact &gt;</h2>
+          <h2 class="mt-sm-3 mb-3">&lt; Contact &gt;</h2>
 
           <ul class="fa-ul mb-4 ml-0">
             <li id="mail-address">
