--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </h4>
 
           <p class="mb-3">
-           Hi! My name is Kaustubh Joshi and I am a full-stack Web Application Developer and Software Developer, currently living in New Delhi , India. I am currently pursuing Bachelor of Technology in Computer Science from Maharaja Surajmal Institute of Technology, and my primary focus and inspiration for my studies is Web Development. 
+           Hi! My name is Kaustubh Joshi and I am a full-stack Web Application Developer and Software Developer, currently living in New Delhi , India. I am currently pursuing Bachelor of Technology in Computer Science from MSIT, and my primary focus and inspiration for my studies is Web Development. 
           </p>
 
           <p>
