--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="author" content="Kaustubh Joshi" />
 
     <title>Kaustubh Joshi</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="/favicon.ico" type="image/avatar" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/avatar"> -->
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
