--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">PCM</li>
                   <li class="list-group-item">English</li>
-                  <li class="list-group-item">Comouter Science</li>
+                  <li class="list-group-item">Computer Science</li>
                   <li class="list-group-item">Percentage : 92%</li>
                   <!-- <li class="list-group-item">Bootstrap 4</li> -->
                 </ul>
