--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </h4>
 
           <p class="mb-3">
-           Hi! My name is Kaustubh Joshi and I am a full-stack Web Application Developer and Software Developer, currently living in New Delhi , India. I am currently pursuing B.Tech in Computer Science from MSIT, and my primary focus and inspiration for my studies is Web Development. 
+           Hi! My name is Kaustubh Joshi and I am a full-stack Web Application Developer and Software Developer, currently living in New Delhi , India. I am currently pursuing B.Tech in Computer Science from MSIT,IPU and my primary focus and inspiration for my studies is Web Development. 
           </p>
 
           <p>
@@ -317,7 +317,7 @@
               </div>
               <div class="card-body pb-0">
                 <p>2017 - 2018</p>
-                <h6 class="card-title">B.Tech MSIT,Janakpuri</h6>
+                <h6 class="card-title">B.Tech MSIT,IPU</h6>
 
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">Computer Science & Engineering</li>
